Fix guththila serialization of special chars in attr

JIRA: AXIS2C-1627